--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
 //do not copy paste this code
+<html>
+    <head>
+        <title>Alice - ここは何処？</title>
+        <style>
+            
+            body
+            {
+                    background-color: gray;
+            }
+            center
+            {
+                text-align: center;
+            }
+            c1
+            {
+                text-align: center;
+                font-size: 50px;
+                font-weight: 1000;
+            }
+            c2
+            {
+                text-align: center;
+                font-size: 40px;
+                font-weight: 1000;
+            }
+        </style>
+    </head>
+    <body>
+        <center><c1>東京都■■■区■■■■■</c1><c2>にて</c2><c1>再発見</c1><br>
+        <c1>位置情報情報求<br>
+        ・黒髪<br>
+        ・赤色灯</c1><c2>を</c2><c1>所持</c1><br>
+        <c1>・二重</c1><c2>で</c2><c1>陰湿</c1><c2>な</c2><c1>目</c1><c2>をしている</c2><br>
+        <c1>・中学生</c1><c2>と</c2><c1>見</c1><c2>られる</c2><br>
+        <c1>危険物所持！見</c1><c2>かけた</c2><c1>際</c1><c2>は</c2><c1>位置情報</c1><c2>を</c2><c1>以下</c1><c2>から</c2><c1>送信</c1><br>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf4lSxRXBSdBCYFNXlhUVrueafIHGxfrGDsiuNuOd497AP9Fw/viewform?embedded=true" width="640" height="1356" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe><br>
+        </center>このサイトは仮想的なもので、実在する出来事ではありませんが、実在する人物の情報です。
+    </body>
+</html>
