--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-//do not copy paste this code
 <html>
     <head>
-        <title>Alice - ここは何処？</title>
+        <title>Alice police 中学生連続殺人事件</title>
         <style>
             
             body
