--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
         <title>Alice police 中学生連続殺人事件</title>
         <style>
             
-            body
-            {
-                    background-color: gray;
-            }
+            body {
+    background-color: darkgrey;
+  }
             center
             {
                 text-align: center;
@@ -23,15 +22,27 @@
                 font-size: 40px;
                 font-weight: 1000;
             }
+            s1
+            {
+                text-align: center;
+                font-size: 30px;
+                font-weight: 1000;
+            }
+            s2
+            {
+                text-align: center;
+                font-size: 20px;
+                font-weight: 1000;
+            }
         </style>
     </head>
     <body>
-        <center><c1>東京都■■■区■■■■■</c1><c2>にて</c2><c1>再発見</c1><br>
+        <center><s1>東京都■■■区■■■■■</s1><s2>にて</s2><s1>Twitter</s1><s2>で</s2><s1>知</s1><s2>り</s2><s1>会</s1><s2>ったとみられる</s2><s1>高校男児,女児</s1><s2>を</s2><s1>殺害</s1><s2>した</s2><s1>事件</s1><br>
         <c1>位置情報情報求<br>
         ・黒髪<br>
         ・赤色灯</c1><c2>を</c2><c1>所持</c1><br>
-        <c1>・二重</c1><c2>で</c2><c1>陰湿</c1><c2>な</c2><c1>目</c1><c2>をしている</c2><br>
-        <c1>・中学生</c1><c2>と</c2><c1>見</c1><c2>られる</c2><br>
+        <c1>・二重</c1><br>
+        <c1>・中学生</c1><br>
         <c1>危険物所持！見</c1><c2>かけた</c2><c1>際</c1><c2>は</c2><c1>位置情報</c1><c2>を</c2><c1>以下</c1><c2>から</c2><c1>送信</c1><br>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf4lSxRXBSdBCYFNXlhUVrueafIHGxfrGDsiuNuOd497AP9Fw/viewform?embedded=true" width="640" height="1356" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe><br>
         </center>このサイトは仮想的なもので、実在する出来事ではありませんが、実在する人物の情報です。
